# SIM-UoW-Timetable-bot

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  DISCLAIMER.md  README.md  bot.py  cel.py  celery_test.py  db_migration.py  ecosystem.config.js  new_ripper.py  pyproject.toml  requirements.txt  sample_cfg.py  setup.py  simconnect_ripper.py  test_db.py
.pytest_cache/v/cache/: nodeids
Controllers/: celery_queue.py  db_facade.py
Controllers/Commands/: additional_methods.py  chatbot.py  forget_chatbot.py  mega.py  retrieve_timetable.py  update_chatbot.py
Controllers/Jobs/: reminders.py
Controllers/Ripper/: RipperDecorators.py  login.py  new_timetable.py  other.py  ripper.py  timetable.py
Models/: attendance.py  class_message.py  classes.py  db_models.py  encryption.py  exceptions.py  help_message.py  ics_parser.py  markdown.py  markdown_sanitizer.py  mqbot.py  reminder_message.py  singleton_sp.py  timetable_message.py  user_from_db.py  user_object.py
Tests/: test_class_structure.py  test_message_timetable.py  test_ripper.py  test_timetable_ripper.py
backend/: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
backend/Templates/: error_template.py
backend/__tests__/: test_routes.py
backend/common/: redis_if.py
backend/routes/: Scraper.py  __init__.py
old_files/: db_migration.py  new_ripper.py  setup.py.bak
