[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["xlanor <contact@jingk.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
flask-restful = "^0.3.8"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
fakeredis = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
